package com.farmdrop.farmdropapi;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class FarmdropApiApplication {

    public static void main(String[] args) {
        SpringApplication.run(FarmdropApiApplication.class, args);
    }

}
