package com.farmdrop.farmdropapi.exceptions;

public class BulkOrderException extends Exception {
    public BulkOrderException(String message) {
        super(message);
    }

}
