package com.farmdrop.farmdropapi.models;

public class User {
    // private is visible to:
    // - same class

    private int id;
    private String name;
    private String password;
    private String email;
    private String role;    //customer or admin

    public User(){};

    public User(int id, String name, String password, String email, String role) {
        this.id = id;
        this.name = name;
        this.password = password;
        this.email = email;
        this.role = role;
    }

    //Getters and setters

    public int getId() {
        return id;
    }
    public void setId(int id) {
        this.id = id;
    }



    public String getName() {
        return name;
    }
    public void setName(String name) {
        this.name = name;
    }



    public String getPassword() {
        return password;
    }
    public void setPassword(String password) {
        this.password = password;
    }



    public String getEmail() {
        return email;
    }
    public void setEmail(String email) {
        this.email = email;
    }



    public String getRole() {
        return role;
    }
    public void setRole(String role) {
        this.role = role;
    }
}
